--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "Agent to assist cron jobs required for medisure project",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^4.3.2",
+    "cron-parser": "^5.3.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "medisure-mongoose-model": "^1.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
+    "mongoose-sequence": "^6.0.1",
     "node-cron": "^4.2.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
