--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "cron": "^4.3.2",
     "cron-parser": "^5.3.0",
     "dotenv": "^17.2.0",
